<resources>
    <string name="app_name">SaveFall</string>
    <string name="Hello">Hello</string>
    <string name="on_x">x: </string>
    <string name="on_y">y: </string>
    <string name="on_z">z: </string>
    <string name="http_text">Http request</string>
    <string name="welcome">Welcome</string>
    <string name="to_home">Home page</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logOut">Log Out</string>
    <string name="name">Name</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="birthDate">Birth date</string>
    <string name="dateInputDefault">dd/mm/yyyy</string>
    <string name="backgroundOk">Click here to start background Service</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">Are you alright?</string>
    <string name="check_state_dialog_title">Check state</string>
    <string name="are_ok">Are you ok?</string>
    <string name="you_are_fine">Press ok if you are fine</string>
    <string name="confirm">COnfirm</string>
    <string name="channel_name">SaveFall Notification</string>
    <string name="channel_description">Include all SaveFall notification</string>

</resources>
